# GreenEdge

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  app.overlay  prj.conf  west.yml
.github/workflows/: build-native.yml
.west/: config
app/: CMakeLists.txt  Kconfig  greenedge.overlay  prj.conf
app/include/: sensor_thread.h  sensors.h  wifi_manager.h
app/src/: main.c  sensor.c  sensor_sht40.c  sensor_thread.c  shell_cmds.c  wifi_manager.c  wifi_shell_cmds.c
src/: lib.rs  main.c
